<resources>
    <string name="app_name">Event Catcher</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="search">Search event, places,…</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_too_short">Password too short!</string>
    <string name="invalid_email">Invalid email</string>
    <string name="sign_in_failure">Sign In Failure</string>
    <string name="error_s">Error: %s</string>
    <string name="close">Close</string>
    <string name="password_is_not_the_same">Password is not the same.</string>
    <string name="back">Back</string>
    <string name="sign_in_successfully">Sign In Successfully</string>
    <string name="empty">Empty</string>
    <string name="enter_event_places">Enter Event, Places,…</string>
    <string name="todo">TODO</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCB3RfKQHFR91ez45V4Ld43n86kdrCZWig</string>
    <string name="help_name">Help Name</string>
    <string name="help_des">Help Description</string>
    <string name="post_help">Post Help</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="your_place">Your Place</string>
    <string name="your_profile">Your Profile</string>
    <string name="discover_place">Discover Place</string>
    <string name="your_events">Your Events</string>
    <string name="setting">Setting</string>
    <string name="feedback">Feedback</string>
    <string name="tutorial">Tutorial</string>
    <string name="log_out">Log Out</string>
    <string name="enter_location">Enter Location</string>
    <string name="explore_events">Explore Events</string>
    <string name="upcoming_event">Upcoming Event</string>
    <string name="ongoing_event">Ongoing Event</string>
    <string name="scope">Scope</string>
    <string name="explore">Explore</string>
    <string name="_100">100</string>
    <string name="start_date">Start Date</string>
    <string name="event_image">Event Image</string>
    <string name="interest">Interest</string>
    <string name="going">Going</string>
    <string name="share">Share</string>
    <string name="place">Place</string>
    <string name="more">More</string>
    <string name="time">Time</string>
    <string name="close_dialog">Close Dialog</string>
    <string name="see_all">See All</string>
    <string name="zero">0</string>
    <string name="direction">Direction</string>
    <string name="logo">LOGO</string>
    <string name="choose_event">Choose Event</string>
    <string name="event_category">Category</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
