<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_user"
            android:title="@string/your_profile" />
        <item
            android:id="@+id/your_event"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/your_events" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/tutorial"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/tutorial" />
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/log_out" />
    </group>
</menu>