<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/normal_space"
        android:src="@drawable/ic_launcher_foreground" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_helpname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_space"
        android:hint="@string/help_name"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_helpdes"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_space"
        android:hint="@string/help_des"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btn_post_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/large_space"
        android:layout_marginVertical="@dimen/normal_space"
        android:background="@drawable/btn_circular_border_shape"
        android:text="@string/save"
        android:textColor="@color/white"
        app:finalCornerAngle="32dp"
        app:initialCornerAngle="32dp"
        app:spinning_bar_color="@color/white"
        app:spinning_bar_padding="6dp" />

    <Button
        android:id="@+id/btn_back"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_bg_white"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary" />

</LinearLayout>