<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/title_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/loading_image"
        android:contentDescription="@string/event_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:id="@+id/title_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="30"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/title_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="APR"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Hội ngộ Honda 67 năm đỉnh cao phong độ tại Đà Nẵng - 20/20/2020"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/title_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Hosted by Hội ngộ Honda 67 năm đỉnh cao phong độ tại Đà Nẵng - 20/20/2020"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_clickable_interest"
                android:clickable="true"
                android:drawableTop="@drawable/ic_star_border_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/interest"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_clickable_going"
                android:clickable="true"
                android:drawableTop="@drawable/ic_check_black_36dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/going"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:focusable="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:drawableTop="@drawable/ic_share_black_36dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:drawableTop="@drawable/ic_more_horiz_black_36dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_access_time_black_24dp"
                android:tint="#AAAAAA"
                android:contentDescription="@string/time" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Thursday, 30/03/2002 at 09:00"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location_on_black_24dp"
                android:tint="#AAAAAA"
                android:contentDescription="@string/place" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_location_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Trung tâm hữu nghị tiệc cưới"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_location_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Phòng 1808, Tầng 18, Mê Linh Point Tower, 02 Ngô Đức Kế, Phường Bến Nghé, Quận 1, TP Hồ Chí Minh"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>